@@ -24,14 +24,14 @@ Use Resourcebundles on a environmental or user specific level.</description>
 
 
 	<issueManagement>
-		<system>sourceforge</system>
-		<url>http://sourceforge.net/tracker/?group_id=355433</url>
+		<url>https://github.com/mbrade/prefixedproperties/issues</url>
+		<system>GitHub Issues</system>
 	</issueManagement>
 
 	<scm>
 		<connection>scm:git:https://github.com/mbrade/prefixedproperties.git</connection>
 		<developerConnection>scm:git:https://github.com/mbrade/prefixedproperties.git</developerConnection>
-		<url>scm:git:https://github.com/mbrade/prefixedproperties.git</url>
+		<url>https://github.com/mbrade/prefixedproperties</url>
 	</scm>
 
 	<properties>
@@ -47,7 +47,6 @@ Use Resourcebundles on a environmental or user specific level.</description>
 		<developer>
 			<id>mbrade</id>
 			<name>Marco Brade</name>
-			<url>https://sourceforge.net/users/mbrade</url>
 			<roles>
 				<role>architect</role>
 				<role>developer</role>
@@ -56,8 +55,169 @@ Use Resourcebundles on a environmental or user specific level.</description>
 		</developer>
 	</developers>
 
-	<build>>
+	<build>
 		<plugins>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>downloads-maven-plugin</artifactId>
+				<version>0.6</version>
+				<configuration>
+					<description>Official ${project.name} build of the ${project.version} release</description>
+					<override>true</override>
+					<includeAttached>true</includeAttached>
+					<server>github</server>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>upload</goal>
+						</goals>
+						<phase>install</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.7</version>
+				<configuration>
+					<message>Building site for ${project.version}</message>
+					<server>github</server>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin>	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<reportPlugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-project-info-reports-plugin</artifactId>
+							<version>2.2</version>
+							<configuration>
+								<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
+								<dependencyLocationsEnabled>true</dependencyLocationsEnabled>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>findbugs-maven-plugin</artifactId>
+							<version>2.3.1</version>
+							<configuration>
+								<maxHeap>512</maxHeap>
+								<fork>true</fork>
+								<outputEncoding>${encoding}</outputEncoding>
+								<xmlOutput>true</xmlOutput>
+								<!-- Optional derectory to put findbugs xdoc xml report -->
+								<findbugsXmlOutput>true</findbugsXmlOutput>
+								<findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>cobertura-maven-plugin</artifactId>
+							<version>2.4</version>
+							<configuration>
+								<check>
+									<branchRate>75</branchRate>
+									<lineRate>75</lineRate>
+									<haltOnFailure>false</haltOnFailure>
+									<totalBranchRate>75</totalBranchRate>
+									<totalLineRate>75</totalLineRate>
+									<packageLineRate>75</packageLineRate>
+									<packageBranchRate>75</packageBranchRate>
+								</check>
+								<formats>
+									<format>html</format>
+									<format>xml</format>
+								</formats>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-checkstyle-plugin</artifactId>
+							<version>2.5</version>
+							<configuration>
+								<encoding>${encoding}</encoding>
+								<configLocation>${basedir}/src/etc/checkstyle.xml</configLocation>
+								<enableRulesSummary>false</enableRulesSummary>
+								<fork>true</fork>
+								<meminitial>128m</meminitial>
+								<maxmem>512m</maxmem>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.7</version>
+							<reportSets>
+								<reportSet>
+									<id>non-aggregate</id>
+									<configuration>
+										<includeDependencySources>false</includeDependencySources>
+										<javaApiLinks>
+											<property>
+												<name>api_${java.version}</name>
+												<value>http://download.oracle.com/javase/6/docs/api/</value>
+											</property>
+											<property>
+												<name>spring</name>
+												<value>http://static.springsource.org/spring/docs/2.5.x/api</value>
+											</property>
+										</javaApiLinks>
+									</configuration>
+									<reports>
+										<report>javadoc</report>
+									</reports>
+								</reportSet>
+							</reportSets>
+						</plugin>
+						<plugin>
+							<artifactId>maven-pmd-plugin</artifactId>
+							<version>2.5</version>
+							<configuration>
+								<linkXref>false</linkXref>
+								<sourceEncoding>${encoding}</sourceEncoding>
+								<minimumTokens>100</minimumTokens>
+								<targetJdk>${java.version}</targetJdk>
+							</configuration>
+							<reportSets>
+								<reportSet>
+									<reports>
+										<report>pmd</report>
+										<report>cpd</report>
+									</reports>
+								</reportSet>
+							</reportSets>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>2.6</version>
+							<configuration>
+								<includes>
+									<include>**/*Suite.java</include>
+									<include>**/*Test.java</include>
+								</includes>
+								<parallelMavenExecution>true</parallelMavenExecution>
+								<perCoreThreadCount>2</perCoreThreadCount>
+								<forkMode>once</forkMode>
+								<argLine>-Xmx1024m -XX:MaxPermSize=128M</argLine>
+								<aggregate>true</aggregate>
+							</configuration>
+						</plugin>
+					</reportPlugins>
+				</configuration>
+			</plugin>	
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
